# live-bootcamp-project

./: Cargo.toml  compose.yml
.github/workflows/: prod.yml
auth-service/: .pre-commit-config.yaml  Cargo.toml  Dockerfile
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: state.rs
auth-service/src/domain/: api.rs  data_stores.rs  email.rs  email_client.rs  error.rs  hashmap_two_fa_code_store.rs  mod.rs  parse.rs  password.rs  redis_two_fa_code_store.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs  redis_banned_token_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
