[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

redis = { version = "0.25.2", features = ["tokio-comp"] }
# For password hashing function since we need to hash the passwords
# before storing them in the database
argon2 = { version = "0.5.3", features = ["std"] }
# SQLx is a modern SQL client built from the ground up for Rust, in Rust.
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
# Random number generator
rand = "0.8.5"
# For validating email and password
validator = "0.16.1"
async-trait = "0.1.78"
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
# Add tracing for logging
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
# Provides the core functionality for creating and managing spans and events.
# It allows your application to produce trace data that describes the execution flow.
tracing = "0.1.40"
# Configures how the trace data is collected, processed, and exported.
# It allows you to define subscribers that record the trace data to
# various outputs, making it useful for monitoring and debugging.
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
# For auth
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
axum-extra = { version = "0.9.2", features = ["cookie"] }
# For secrets
dotenvy = "0.15.7"
lazy_static = "1.4.0"

# Used only during development such as
# running tests, building documentation, etc.
[dev-dependencies]
# For docstring testing of async functions
tokio-test = "0.4.4"
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
test-case = "*"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
